{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 672,
  "lineage": "b9adae63-a9d9-b118-2ad1-76b7edc3f430",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-083bcc06371967ef2",
            "public_dns": "ec2-44-214-185-138.compute-1.amazonaws.com",
            "public_ip": "44.214.185.138",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.eks-gateway",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:internet-gateway/igw-0be71645264610ef9",
            "id": "igw-0be71645264610ef9",
            "owner_id": "633667251057",
            "tags": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ca9a987b4683ffd6",
            "owner_id": "633667251057",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0be71645264610ef9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eks-gateway",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-route-asso1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bb0f58b3beedcab",
            "route_table_id": "rtb-0ca9a987b4683ffd6",
            "subnet_id": "subnet-0148ef6212d0a0b6b"
          },
          "dependencies": [
            "aws_internet_gateway.eks-gateway",
            "aws_route_table.eks-route-table",
            "aws_subnet.public_subnet1",
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-nodesecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:security-group/sg-02cbf2710818db62c",
            "description": "Allow traffic to communicate with nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02cbf2710818db62c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-security-nodegroup",
            "name_prefix": null,
            "owner_id": "633667251057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:security-group/sg-02791e8f9aaf2f9cb",
            "description": "Allow traffic to communicate with nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02791e8f9aaf2f9cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-security-group",
            "name_prefix": null,
            "owner_id": "633667251057",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_security"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-cluster-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.248.81.254/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3878988607",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02791e8f9aaf2f9cb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-security",
            "aws_vpc.eks-vpc",
            "data.http.workstation-public-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks-node-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "49.248.81.254/32"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-2514287426",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02cbf2710818db62c",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks-nodesecurity",
            "aws_vpc.eks-vpc",
            "data.http.workstation-public-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:subnet/subnet-0148ef6212d0a0b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0148ef6212d0a0b6b",
            "map_public_ip_on_launch": true,
            "owner_id": "633667251057",
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:subnet/subnet-0fcc3feee9f7dc300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0fcc3feee9f7dc300",
            "map_public_ip_on_launch": true,
            "owner_id": "633667251057",
            "vpc_id": "vpc-0e8a4c43ce7b04ac5"
          },
          "dependencies": [
            "aws_vpc.eks-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633667251057:vpc/vpc-0e8a4c43ce7b04ac5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-099db44392019b97c",
            "default_route_table_id": "rtb-0f9a63ad63a9f973f",
            "default_security_group_id": "sg-095d713d1ce419495",
            "dhcp_options_id": "dopt-04facd4d7246fd3e9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e8a4c43ce7b04ac5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0f9a63ad63a9f973f",
            "owner_id": "633667251057",
            "tags": {
              "name": "eks-vpc"
            }
          }
        }
      ]
    }
  ]
}